echo/echo-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: echo-gateway
  namespace: echo
spec:
  addresses:
    - type: IPAddress
      value: 172.18.250.12
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: echo-http-gw
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: echo-https-gw
      hostname: 'echo.echo-lb.kube'
      tls:
        certificateRefs:
          - kind: Secret
            name: kube-tls
            namespace: cert-manager
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-echo-gw-ref-cert
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: echo
  to:
    - group: ''
      kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-http-route
  namespace: echo
spec:
  parentRefs:
    - name: echo-gateway
      namespace: echo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-service
          port: 5678
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-https-route
  namespace: echo
spec:
  parentRefs:
    - name: echo-gateway
      namespace: echo
  hostnames:
    - 'echo.echo-lb.kube'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-service
          port: 5678
